# InsMOS

./: .gitignore  LICENSE  README.md  requirements.txt  setup.py
config/: config.yaml
dataloader/: augmentation.py  boundingbox_label_readme.md  data_processor.py  datasets.py
models/: loss.py  metrics.py  models.py  post_process.py
models/MinkowskiEngine/: minkunet.py
models/backbones_2d/: base_bev_backbone.py  center_head.py  height_compression.py  mean_vfe.py
models/backbones_3d/: motionnet.py  spconv_unet.py  voxel_generate.py
models/bbox_post_process/: iou3d_nms_utils.py
models/utils/src/: Array_Index.cpp  CMakeLists.txt
scripts/: predict_mos.py  refine.py  train.py
visual/: dataset_root.yml  render.json  vis_mos_bbox.py
